--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>JobCleaner</title>
   <link rel="stylesheet" href="popup.css" />
 </head>
@@ -13,15 +13,13 @@
     <h1 class="title">JobCleaner</h1>
 
     <div class="option">
-      <label>
-        <input type="checkbox" id="toggleExtension" />
-        Habilitar limpieza de ofertas
-      </label>
+      <label><input type="checkbox" id="toggleExtension" /> Habilitar limpieza de ofertas</label>
     </div>
 
     <div class="option">
       <label for="empresasInput">Empresas bloqueadas:</label>
-      <textarea id="empresasInput" placeholder="Ejemplo: BairesDev, Proservis, Globant"></textarea>
+      <textarea id="empresasInput"
+        placeholder="Pon el nombre exacto de la empresa. Si quieres agregar varias, sepáralas por comas ','"></textarea>
     </div>
 
     <button id="guardarBtn">Guardar configuración</button>
